# cppdl

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt  codegen.cpp  graph.cpp  iree_compile.cpp  iree_example.cpp  iree_run.cpp  mlir_matmul.cpp  mnist.cpp  mnist_inference.cpp  mnist_trace.cpp  stablehlo.cpp  trace.cpp
include/cppdl/: codegen.h  graph.h  iree.h  nn.h  tensor.h  tinymlir.h  trace.h
lib/: CMakeLists.txt  codegen.cpp  graph.cpp  iree_compile.cpp  iree_run.cpp  mnist_utils.cpp  tinymlir.cpp
src/: CMakeLists.txt  codegen.cpp  graph.cpp  graph.h  inference.cpp  main.cpp  mnist.cpp  nn.cpp  nn.h  nn_tensor.h  perceptron.cpp  perceptron_simple.cpp  tensor.h  timer.h  tinymlir.h  train.cpp  utils.h
src/cppdl/: tinymlir.cpp
src/data/: dataset.h  nn.h
unittests/: CMakeLists.txt  main_test.cpp  nn_activation.cpp  nn_linear.cpp  nn_relu.cpp  serialization.cpp  tensor.cpp  tensor_argmax.cpp  tensor_broadcast.cpp  tensor_elementwise.cpp  tensor_matmul.cpp  tensor_mse.cpp  tensor_reshape.cpp  tensor_slice.cpp  tensor_softmax.cpp  tensor_stack.cpp  tensor_sum.cpp  tensor_transpose.cpp
